--- a/frontend/src/pages/css/HowItWorks.module.css
+++ b/frontend/src/pages/css/HowItWorks.module.css
@@ -1307,3 +1307,8 @@ h2 {
     min-height: 1.3em;
   }
 }
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px; /* Adjust this value based on your navbar height */
+}
