--- a/frontend/src/pages/css/AboutUsPage.module.css
+++ b/frontend/src/pages/css/AboutUsPage.module.css
@@ -1066,3 +1066,8 @@ section {
   opacity: 1;
   transform: scale(1);
 }
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px; /* Adjust this value based on your navbar height */
+}
